--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.runkeeperclient</groupId>
+    <groupId>com.github.codingricky</groupId>
     <artifactId>runkeeper-client</artifactId>
     <packaging>jar</packaging>
     <name>Runkeeper client</name>
