explicitly set the source/target

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,19 @@
         </developerConnection>
         <url>git://github.com/codingricky/runkeeper-client.git</url>
     </scm>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <developers>
         <developer>
             <id>codingricky</id>
