--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: java
 jdk:
   - oraclejdk7
   - openjdk7
+  - openjdk6
 
 before_install: git clone -b travis `git config --get remote.origin.url` target/travis
 script: mvn deploy --settings target/travis/settings/settings.xml
