--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: java
 jdk:
   - oraclejdk7
-  - openjdk7
-  - openjdk6
 
 before_install: git clone -b travis `git config --get remote.origin.url` target/travis
-script: mvn deploy --settings target/travis/settings/settings.xml
+after_success: mvn deploy --settings target/travis/settings/settings.xml
 
 branches:
   only:
