--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
   - oraclejdk7
 
 before_install: git clone -b travis `git config --get remote.origin.url` target/travis
-after_success: mvn deploy --settings target/travis/settings/settings.xml
+script: mvn deploy --settings target/travis/settings/settings.xml
 
 branches:
   only:
