--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>com.github.codingricky</groupId>
             <artifactId>spark-core-16</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>1.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
